update given step using sharingNg in changeSpaces.feature

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -47,6 +47,7 @@ default:
         - GraphContext:
         - OcisConfigContext:
         - WebDavLockingContext:
+        - SharingNgContext:
 
     apiSpacesShares:
       paths:
